Change text in footer

--- a/index.html
+++ b/index.html
@@ -404,9 +404,10 @@
         </div>
 
         <p class="footer__copyright">
-          Built by 
-          <a href="https://github.com/anonsas" target="_blank" class="footer__link">IGOR LUKJANOV </a>
-          from online udemy course ADVANCED CSS AND SASS by Jonas Schmedtmann..
+          Design by Jonas Schmedtmann.
+          Developed by 
+          <a href="https://github.com/anonsas" target="_blank" class="footer__link">Igor Lukjanov </a>
+          
         </p>
       </div>
     </footer>
